--- a/Menghitung_Mimpi/app/src/main/AndroidManifest.xml
+++ b/Menghitung_Mimpi/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Menghitung_Mimpi"
         tools:targetApi="31">
         <activity
+            android:name=".layout.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".layout.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".layout.IntroSliderActivity"
+            android:exported="false" />
+        <activity
             android:name=".layout.SplashActivity"
             android:exported="true">
             <intent-filter>
