--- a/Menghitung_Mimpi/app/src/main/AndroidManifest.xml
+++ b/Menghitung_Mimpi/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Menghitung_Mimpi"
         tools:targetApi="31">
         <activity
+            android:name=".layout.NewPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".layout.SecurityPinActivity"
+            android:exported="false" />
+        <activity
+            android:name=".layout.ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".layout.LoginActivity"
             android:exported="false" />
         <activity
