--- a/Menghitung_Mimpi_API/package.json
+++ b/Menghitung_Mimpi_API/package.json
@@ -1,14 +1,16 @@
 {
   "dependencies": {
+    "@joi/date": "^2.1.1",
     "axios": "^1.7.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-rate-limit": "^7.2.0",
+    "express-rate-limit": "^7.3.1",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.3"
   }
