--- a/Menghitung_Mimpi/app/src/main/AndroidManifest.xml
+++ b/Menghitung_Mimpi/app/src/main/AndroidManifest.xml
@@ -16,36 +16,49 @@
         android:theme="@style/Theme.Menghitung_Mimpi"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
+        <activity
+            android:name=".layout.ChatBotActivity"
+            android:windowSoftInputMode="adjustPan|adjustResize"
+            android:exported="false" />
+
         <activity
             android:name=".layout.NewPasswordActivity"
             android:exported="false" />
+
         <activity
             android:name=".layout.SecurityPinActivity"
             android:exported="false" />
+
         <activity
             android:name=".layout.ForgotPasswordActivity"
             android:exported="false" />
+
         <activity
             android:name=".layout.LoginActivity"
             android:exported="false" />
+
         <activity
             android:name=".layout.RegisterActivity"
             android:exported="false" />
+
         <activity
             android:name=".layout.IntroSliderActivity"
             android:exported="false" />
+
         <activity
             android:name=".layout.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".layout.LoginRegisterActivity"
             android:exported="false" />
+
         <activity
             android:name=".layout.MainActivity"
             android:exported="false" />
